# stream-c

./: CMakeLists.txt  README.md
demos/: client.c  file_copy.c  server.c
src/: istream.h  istream_file.c  istream_file.h  ostream.h  ostream_file.c  ostream_file.h  platform.h  stream.h  stream_log.c  stream_log.h  stream_serial.cpp  stream_serial.h  stream_tcp.c  stream_tcp.h  types_def.h
